--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
  - "3.5"
 install:
   - pip install requests
-  - pip install urllib.request
+  - pip install urllib3
 
 # command to run tests
 script:
